<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".RefereeActivity">


    <Button
        android:id="@+id/buttonStartStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:background="@android:color/transparent"
        android:text="@string/timerControl"
        android:textColor="@color/text_white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        android:text="@string/reset"
        android:textSize="24sp"
        android:textColor="@color/text_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonGoodLift"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:text="@string/good_lift"
        android:background="@color/white"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <Button
        android:id="@+id/buttonRed"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/vote_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoodLift" />

    <Button
        android:id="@+id/buttonBlue"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:background="@color/vote_blue"
        app:layout_constraintEnd_toStartOf="@+id/buttonYellow"
        app:layout_constraintStart_toEndOf="@+id/buttonRed"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoodLift" />

    <Button
        android:id="@+id/buttonYellow"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/vote_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoodLift" />
</androidx.constraintlayout.widget.ConstraintLayout>